--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@ type: mainpage
 	<article>
 		{% if paginator.next_page %}
 		<a href="/page{{ paginator.next_page }}/">&auml;ltere Artikel</a>
+		{% else %}
+		&nbsp;
 		{% endif %}
 
 		{% if paginator.previous_page %}
-		<a style="float: right" href="/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">neuere Artikel</a>
+		<a class="floatRight" href="/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">neuere Artikel</a>
 		{% endif %}
 	</article>
 
