new design complete

--- a/404.html
+++ b/404.html
@@ -2,9 +2,13 @@
 layout: default
 permalink: /404.html
 title: Error 404
-type: 404
+type: static
+lang: de
 ---
 
+<section>Error</section>
+
+<article>
 <h1>Error 404: Not Found</h1>
 
 <p>
@@ -14,3 +18,4 @@ type: 404
 <p>
 	The page you requested could not be found. Most likely there is typing error in the URL. Oterhwise the entered permalink has changed, but that is not supposed to happen.
 </p>
+</article>
