--- a/biographie/index.html
+++ b/biographie/index.html
@@ -1,11 +1,10 @@
 ---
-layout: default
+layout: staticPage
 title: Biographie
-type: about
+type: static
 ---
 
 <article>
-<h1>Biographie</h1>
 
 <p>							
   Sch&ouml;n, dass du den Weg auf meine Seite gefunden hast! Auf diesem kleinen Blog ver&ouml;ffentliche ich regelm&auml;&szlig;g unregelm&auml;&szlig;ig Artikel. Die Themen varriieren dabei stark nach meinen Interessen. Doch zun&auml;chst m&ouml;chte ich ein paar Informationen &uuml;ber mich selbst geben.
