--- a/en/biography/index.html
+++ b/en/biography/index.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: staticPage
 title: Biography
-type: about
+type: static
+lang: en
 ---
 
 <article>
-<h1>Biography</h1>
 
 <p>		
 	Great that you found your way to my website! I use this little blog to publish articles on a regularly unregular basis. Topics vary strongly according to my interests. But let me give you a few information about me.
