--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 ---
 layout: default
 title: Hauptseite
-type: mainpage
+type: static
+lang: de
 ---
 
 <section>Aktuelle Artikel</section>
 
 {% if paginator.posts == nil %}
 	<article>
-		<em>{{ site.data.i18n["de"]["strings"].no_articles }}</em>
+		{{ site.data.i18n['de']['main']['strings'].noArticles }}
 	</article>
 {% else %}
 	
 	{% for post in paginator.posts %}
-		{% include shortPost.html post=post %}
+		{% include shortPost.html post=post lang='de' %}
 	{% endfor %}
 
+	{% if paginator.total_pages > 1 %}
+	{% assign data = site.data.i18n['de']['main'] %}
 	<article>
 		{% if paginator.next_page %}
-		<a href="/page{{ paginator.next_page }}/">&auml;ltere Artikel</a>
+		<a href="/page{{ paginator.next_page }}/">{{ data['strings'].olderArticles }}</a>
 		{% else %}
 		&nbsp;
 		{% endif %}
 
 		{% if paginator.previous_page %}
-		<a class="floatRight" href="/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">neuere Artikel</a>
+		<a class="floatRight" href="/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">{{ data['strings'].newerArticles }}</a>
 		{% endif %}
 	</article>
-
+	{% endif %}
 {% endif %}
 
