code cleaning, layout improvements, some bugs, ...

--- a/404.html
+++ b/404.html
@@ -3,8 +3,9 @@ layout: default
 permalink: /404.html
 title: Error 404
 type: static
-lang: de
 ---
+
+{% include language.html %}
 
 <section>Error</section>
 
