--- a/en/404.html
+++ b/en/404.html
@@ -1,10 +1,11 @@
 ---
 layout: default
-permalink: /404.html
+permalink: /en/404.html
 title: Error 404
 type: static
-lang: en
 ---
+
+{% include language.html %}
 
 <section>Error</section>
 
