--- a/en/index.html
+++ b/en/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: Mainpage
 type: static
-lang: en
 ---
+
+{% include language.html %}
 
 <section>Latest articles</section>
 
