--- a/en/index.html
+++ b/en/index.html
@@ -21,13 +21,13 @@ type: static
 	{% assign data = site.data.i18n['en']['main'] %}
 	<article>
 		{% if paginator.next_page %}
-		<a href="/en/page{{ paginator.next_page }}/">{{ data['strings'].olderArticles }}</a>
+		<a class="readMore" href="/en/page{{ paginator.next_page }}/">{{ data['strings'].olderArticles }}</a>
 		{% else %}
 		&nbsp;
 		{% endif %}
 
 		{% if paginator.previous_page %}
-		<a class="floatRight" href="/en/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">{{ data['strings'].newerArticles }}</a>
+		<a class="readMore floatRight" href="/en/{% if paginator.previous_page != 1 %}page{{ paginator.previous_page }}/{% endif %}">{{ data['strings'].newerArticles }}</a>
 		{% endif %}
 	</article>
 	{% endif %}
