website now passes W3C validator :-)

--- a/404.html
+++ b/404.html
@@ -7,11 +7,14 @@ type: static
 
 {% include language.html %}
 
-<section>Error</section>
+<section>
+	<h1>Error</h1>
+</section>
 
 <article>
-<h1>Error 404: Not Found</h1>
+	<h1>Error 404: Not Found</h1>
 
-<p>
-	Die angeforderte Seite konnte nicht gefunden werden. Vermutlich liegt ein Schreibfehler in der URL vor. Anderenfalls hat sich der eingegebene Permalink ge&auml;ndert, was aber eigentlich nicht passieren sollte.
-</p>
+	<p>
+		Die angeforderte Seite konnte nicht gefunden werden. Vermutlich liegt ein Schreibfehler in der URL vor. Anderenfalls hat sich der eingegebene Permalink ge&auml;ndert, was aber eigentlich nicht passieren sollte.
+	</p>
+</article>
