--- a/en/404.html
+++ b/en/404.html
@@ -7,12 +7,14 @@ type: static
 
 {% include language.html %}
 
-<section>Error</section>
+<section>
+	<h1>Error</h1>
+</section>
 
 <article>
-<h1>Error 404: Not Found</h1>
+	<h1>Error 404: Not Found</h1>
 
-<p>
-	The page you requested could not be found. Most likely there is typing error in the URL. Oterhwise the entered permalink has changed, but that is not supposed to happen.
-</p>
+	<p>
+		The page you requested could not be found. Most likely there is typing error in the URL. Oterhwise the entered permalink has changed, but that is not supposed to happen.
+	</p>
 </article>
