--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,9 @@ type: static
 
 {% include language.html %}
 
-<section>Latest articles</section>
+<section>
+	<h1>Latest articles</h1>
+</section>
 
 {% if paginator.posts == nil %}
 	<article>
