--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ type: static
 
 {% include language.html %}
 
-<section>Aktuelle Artikel</section>
+<section>
+	<h1>Aktuelle Artikel</h1>
+</section>
 
 {% if paginator.posts == nil %}
 	<article>
